# metafrasis

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  app.py  config.py  pyproject.toml  setup.sh
.github/workflows/: pages.yml
app/: __init__.py  config.py  main.py  state.py
app/backend/: state.py
app/backend/pages/: __init__.py  annotate.py  ocr.py
app/components/: __init__.py
app/frontend/annotation_canvas/: index.html  package-lock.json  package.json  vitest.config.ts
app/frontend/annotation_canvas/src/: types.ts
app/frontend/annotation_canvas/tests/: AnnotationCanvas.test.tsx  setup.ts  useDrawing.test.ts
app/frontend/ocr_viewer/: package-lock.json  package.json
app/pages/: annotate.py  ocr.py
app/services/annotation/: canvas.py  exporter.py  models.py
app/services/ocr/: __init__.py  factory.py  viewer.py
docs/: ANNOTATION.md  ARCHITECTURE.md  OCR_SERVICE.md  QUICKSTART.md  TESTING.md  TRAINING.md
frontend/annotation_canvas/: package-lock.json  package.json  vite.config.ts
frontend/annotation_canvas/src/: AnnotationCanvas.tsx  index.tsx  types.ts
frontend/ocr_viewer/: index.html  package-lock.json  vite.config.ts
frontend/ocr_viewer/src/: OCRViewer.tsx  index.tsx
installer/: README.md  build.sh  build_dmg.sh  build_universal.sh
installer/config/: entitlements.plist  metafrasis.spec
installer/tests/: test_app_bundle.py
installer/wrapper/: launcher.py
ml/: config.py
ml/models/: __init__.py
ml/models/backbones/: mobilenet.py
ml/models/composites/: __init__.py  craft.py  crnn.py
ml/models/heads/: ctc.py  db.py
ml/models/necks/: __init__.py  fpn.py  sequence.py
ml/training/: __init__.py
ml/training/configs/: craft.yaml  ppocr.yaml  trocr_lora.yaml
ml/training/evaluate/: __init__.py
ml/training/export/: __init__.py  to_huggingface.py
ml/training/finetune/: __init__.py  base.py  utils.py
models/: download_models.py  layers.py  registry.json
models/backbones/: __init__.py  crnn_cnn.py  resnet.py  vgg.py
models/composites/: dbnet.py  ppocr.py
models/heads/: __init__.py
mps_ctc/: README.md  ctc_loss.py  setup.py  setup_lsp.py
mps_ctc/csrc/: ctc_kernels.metal  ctc_mps.mm
mps_ctc/tests/: conftest.py  test_combined_kernel.py  test_ctc_loss.py  test_metal_kernels.py  test_native_extension.py
native/mps/ctc/: __init__.py  setup.py
pages/: 404.html  index.html
scripts/: build-release.sh  lstm_finetuning_diagrams.py  setup.sh  test_kraken_install.py
services/annotation/: __init__.py  canvas.py  exporter.py  storage.py
services/ocr/: __init__.py  base.py  cache.py  factory.py  preprocessing.py  types.py  viewer.py
services/ocr/detectors/: base.py  craft.py  db.py
services/ocr/engines/: pytorch_engine.py  trocr.py
services/ocr/recognizers/: base.py  crnn.py  layers.py  ppocr.py  ppocr_onnx.py  trocr.py
tests/integration/: test_e2e_pipeline.py  test_ocr_inference.py
tests/ml/models/: conftest.py  test_backbones.py  test_composites.py  test_heads.py  test_layers.py  test_necks.py  test_registry.py
tests/test_annotation/: conftest.py  test_exporter.py  test_models.py  test_storage.py
tests/test_ocr/: __init__.py  conftest.py  test_base.py  test_cache.py  test_factory.py  test_integration.py  test_preprocessing.py  test_tesseract.py
tests/test_ocr/test_detectors/: test_base.py  test_craft.py  test_whole_image.py
tests/test_ocr/test_engines/: test_pytorch_engine.py
tests/test_ocr/test_recognizers/: test_base.py  test_crnn.py  test_trocr.py
tests/test_training/: __init__.py  conftest.py  test_integration.py
tests/test_training/test_evaluate/: test_base.py  test_detector_metrics.py  test_recognizer_metrics.py
tests/test_training/test_finetune/: test_base.py  test_trainers.py
training/: __init__.py
training/configs/: craft.yaml  crnn.yaml  db.yaml  ppocr.yaml  trocr_lora.yaml
training/evaluate/: __init__.py  base.py
training/evaluate/detectors/: map.py  precision_recall.py
training/evaluate/recognizers/: accuracy.py
training/export/: __init__.py  to_onnx.py
training/finetune/: __init__.py  base.py  utils.py
training/finetune/detectors/: base.py  craft.py  db.py
training/finetune/recognizers/: __init__.py  base.py  crnn.py  ppocr.py  trocr.py
(+55 files in other folders)
