[project]
name = "metafrasis"
version = "0.1.0"
description = "Ancient Greek OCR, Transliteration, and Translation Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "sentencepiece>=0.1.99",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
